[package]
name = "simple-tunnel"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo-console = "0.3.0"
instant = { version = "0.1.13", features = [ "wasm-bindgen", "inaccurate" ] }
js-sys = "0.3.76"
rand = "0.8.5"
wasm-bindgen = "0.2.99"
yew = { version="0.21.0", features = ["csr"] }
yew-router = "0.18.0"


[dependencies.web-sys]
version = "0.3.72"
features = [
  "Navigator",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
  "CanvasGradient",
  "CanvasRenderingContext2d",
  "HtmlCanvasElement",
  "HtmlImageElement",
  "ImageData",
  "ImageBitmap",
  "Storage",
  "Touch",
  "TouchEvent",
  "TouchList",
  'WebGlBuffer',
  'WebGlProgram',
  'WebGlRenderingContext',
  'WebGlShader',
  'WebGlUniformLocation',
  'WebGlTexture'
]
